<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_search_on_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_on_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search"
                android:inputType="text"
                android:maxLines="1"
                android:autofillHints="" />

            <Spinner
                android:id="@+id/map_category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/categories" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/map_start_search"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_corner"
                    android:foreground="@android:drawable/ic_menu_search"
                     />

                <Button
                    android:id="@+id/map_get_my_location"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corner"
                    android:foreground="@android:drawable/ic_menu_mylocation" />


            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
