<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapFragment"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/go_to_map" />

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/user_profile" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_black_24dp"
        android:title="@string/search" />
    <item
        android:id="@+id/newEditFragment"
        android:icon="@drawable/baseline_add_box_black_24dp"
        android:title="@string/new_item" />
    <item
        android:id="@+id/wishlistViewFragment"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/wishlist_menu_title" />
...
