<resources>
    <string name="app_name">Sharingang</string>
    <string name="new_item">New Item</string>
    <string name="description">Description</string>
    <string name="create_item">Create Item</string>
    <string name="go_to_map">Go to Map</string>
    <string name="edit">Edit</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="display_price">CHF %.2f</string>
    <string name="display_quantity">Quantity: %d</string>
    <string name="item_image_description">Item Image</string>
...
    <string name="userNotLoggedInCreateItem">You need to be logged in to create an item.</string>
    <string name="userNotLoggedInWishlist">You need to be logged in to access the wishlist.</string>
    <string name="default_rating">No Ratings</string>
    <string name="apply_rating">Rate</string>
    <string-array name="categories">
        <item>None</item>
        <item>Book</item>
        <item>Electronics</item>
        <item>Games</item>
        <item>Clothes</item>
        <item>Miscellaneous</item>
    </string-array>
    <string name="report_user">Report User</string>
    <string name="inappropriate_username">Inappropriate Username</string>
    <string name="inappropriate_profile_picture">Inappropriate Profile Picture</string>
...
